feature: add gcc info in local docker compose environment